# code-dolphin

./: .gitignore  pyproject.toml
src/dolphin/: __main__.py  errors.py  types.py
src/dolphin/code_explorer/: base.py  git_diff_explorer.py
src/dolphin/llm/agent/: base.py  dummy.py
src/dolphin/llm/llm_provider/: base.py  ollama_provider.py
src/dolphin/prompt_builder/: base.py
