[project]
name = "dolphin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "ollama>=0.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dolphin"]

[project.scripts]
dolphin = "dolphin.main:main"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
line-length = 120
output-format = "full"
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep-naming
    "D",  # pydocstyle
    "B",  # flakes-bugbear
    "ANN",# flakes-annotations
    "A",  # flakes-builtins
    "COM",# flakes-commas
    "T10",# flakes-debugger
    "SIM",# flakes-simplify
    "ARG",# flakes-unused-arguments
    "PLC",# pylint-convention
    "PLE",# pylint-errors
    "UP",  # pyupgrade
    "PL"  # pylint
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.ignore = [
    "D104",
    "D406",
    "D407",
    "D408",
    "D409",
    "D203",
    "D213",
    "D417",
    "B905",
    "ANN002",
    "ANN003",
    "ANN401",
    "ANN204",
    "COM812",
    "D107",
    "N812",
    "SIM108",  # use ternary operator
    "PLR2004", # Magic value used in comparsion
    "PLC0415", # import should be at top of file
]

# Exclude a variety of commonly ignored directories.
lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

lint.pylint.max-args = 12
lint.pylint.max-statements = 60
lint.pydocstyle.convention = "google"
lint.pydocstyle.ignore-decorators = ["typing.overload"]
#lint.pydocstyle.ignore-var-parameters = true
lint.pydocstyle.property-decorators = ["gi.repository.GObject.Property"]

[lint.pep8-naming]
# For pydantic
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pyright]
reportMissingImports = true
